Updated registration. Updated database

--- a/ITManager/ITManager/App.config
+++ b/ITManager/ITManager/App.config
@@ -26,6 +26,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ManagerEntities" connectionString="metadata=res://*/Database.ManagerDatabase.csdl|res://*/Database.ManagerDatabase.ssdl|res://*/Database.ManagerDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SC0461\SQLEXPRESS;initial catalog=Manager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ManagerEntities" connectionString="metadata=res://*/Database.ManagerDatabase.csdl|res://*/Database.ManagerDatabase.ssdl|res://*/Database.ManagerDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SC0461\SQLEXPRESS;initial catalog=Manager;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
