Added all views. Added password changing. Fixed navigation from menu.

--- a/ITManager/ITManager/ITManager.csproj
+++ b/ITManager/ITManager/ITManager.csproj
@@ -115,11 +115,23 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\MyPersonalPageView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\QueriesView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\RegisterView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\RolesManagementView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SearchView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -208,8 +220,11 @@
     <Compile Include="ViewModels\ChangePasswordViewModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\MenuViewModel.cs" />
+    <Compile Include="ViewModels\MyPersonalPageViewModel.cs" />
+    <Compile Include="ViewModels\QueriesViewModel.cs" />
     <Compile Include="ViewModels\RegisterViewModel.cs" />
     <Compile Include="ViewModels\RolesManagementViewModel.cs" />
+    <Compile Include="ViewModels\SearchViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Views\AccountsManagementView.xaml.cs">
       <DependentUpon>AccountsManagementView.xaml</DependentUpon>
@@ -223,11 +238,20 @@
     <Compile Include="Views\MenuView.xaml.cs">
       <DependentUpon>MenuView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\MyPersonalPageView.xaml.cs">
+      <DependentUpon>MyPersonalPageView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\QueriesView.xaml.cs">
+      <DependentUpon>QueriesView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\RegisterView.xaml.cs">
       <DependentUpon>RegisterView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\RolesManagementView.xaml.cs">
       <DependentUpon>RolesManagementView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SearchView.xaml.cs">
+      <DependentUpon>SearchView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ShellView.xaml.cs">
       <DependentUpon>ShellView.xaml</DependentUpon>
@@ -283,9 +307,11 @@
       <DependentUpon>ManagerDatabase.edmx</DependentUpon>
       <LastGenOutput>ManagerDatabase.cs</LastGenOutput>
     </Content>
+    <Content Include="Database\Scripts\Admin creation.sql" />
     <Content Include="Database\Scripts\Positions.sql" />
     <Content Include="Database\Scripts\Roles.sql" />
     <Content Include="Database\Scripts\Tables.sql" />
+    <Resource Include="Images\Logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
