Almost done my page functionallity

--- a/ITManager/ITManager/App.config
+++ b/ITManager/ITManager/App.config
@@ -26,6 +26,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ManagerEntities" connectionString="metadata=res://*/Database.ManagerDatabase.csdl|res://*/Database.ManagerDatabase.ssdl|res://*/Database.ManagerDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ITManager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="ITManagerEntities" connectionString="metadata=res://*/Database.ManagerDatabase.csdl|res://*/Database.ManagerDatabase.ssdl|res://*/Database.ManagerDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ITManager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
