--- a/ITManager/ITManager/packages.config
+++ b/ITManager/ITManager/packages.config
@@ -5,6 +5,7 @@
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Fody" version="4.2.1" targetFramework="net461" developmentDependency="true" />
+  <package id="InputSimulator" version="1.0.4.0" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Unity" version="6.3.0" targetFramework="net461" />
