--- a/ITManager/ITManager/packages.config
+++ b/ITManager/ITManager/packages.config
@@ -13,4 +13,5 @@
   <package id="PropertyChanged.Fody" version="2.6.1" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
+  <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net461" />
 </packages>
