Fixed some bugs

--- a/ITManager/ITManager/packages.config
+++ b/ITManager/ITManager/packages.config
@@ -11,6 +11,8 @@
   <package id="Prism.Unity" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="2.6.1" targetFramework="net461" />
+  <package id="Syncfusion.Licensing" version="17.1.0.47" targetFramework="net461" />
+  <package id="Syncfusion.Shared.WPF" version="17.1.0.47" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
   <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net461" />
