--- a/ITManager/ITManager/ITManager.csproj
+++ b/ITManager/ITManager/ITManager.csproj
@@ -54,18 +54,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <ManifestCertificateThumbprint>9C7DE897F70C25C90CAE645BEA9BBC7C05FF0FB1</ManifestCertificateThumbprint>
-  </PropertyGroup>
-  <PropertyGroup>
-    <ManifestKeyFile>ITManager_TemporaryKey.pfx</ManifestKeyFile>
-  </PropertyGroup>
-  <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignManifests>true</SignManifests>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="AutoMapper, Version=8.0.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.8.0.0\lib\net461\AutoMapper.dll</HintPath>
@@ -407,7 +395,6 @@
     <None Include="Database\ManagerDatabase.edmx.diagram">
       <DependentUpon>ManagerDatabase.edmx</DependentUpon>
     </None>
-    <None Include="ITManager_TemporaryKey.pfx" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -453,10 +440,12 @@
     <Content Include="Database\Scripts\SkillLevels.sql" />
     <Resource Include="Images\false.png" />
     <Resource Include="Images\true.png" />
-    <Content Include="Libraries\Syncfusion.Shared.WPF.dll" />
     <Resource Include="Images\add.ico" />
     <Resource Include="Images\remove.ico" />
     <Resource Include="FodyWeavers.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Libraries\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.4.2.1\build\Fody.targets" Condition="Exists('..\packages\Fody.4.2.1\build\Fody.targets')" />
